// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Macro parsing of v0.6 macros > should parse macro \`$(../t)\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "..",
        "position": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$(/t)\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$(t)\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$(t.x)\` 1`] = `
[
  {
    "accessedProp": {
      "accessedProp": null,
      "attributes": [],
      "path": [
        {
          "index": [],
          "name": "x",
          "position": {
            "end": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "pathPart",
        },
      ],
      "position": {
        "end": {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
        "start": {
          "column": 5,
          "line": 1,
          "offset": 4,
        },
      },
      "type": "macro",
      "version": "0.6",
    },
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$(t[1]/x)\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": [],
    "path": [
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 7,
                "line": 1,
                "offset": 6,
              },
              "start": {
                "column": 4,
                "line": 1,
                "offset": 3,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                  "start": {
                    "column": 5,
                    "line": 1,
                    "offset": 4,
                  },
                },
                "type": "text",
                "value": "1",
              },
            ],
          },
        ],
        "name": "t",
        "position": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [],
        "name": "x",
        "position": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$(t-x[1].y{a="b"})\` 1`] = `
[
  {
    "accessedProp": {
      "accessedProp": null,
      "attributes": {
        "a": {
          "children": [
            {
              "position": {
                "end": {
                  "column": 16,
                  "line": 1,
                  "offset": 15,
                },
                "start": {
                  "column": 15,
                  "line": 1,
                  "offset": 14,
                },
              },
              "type": "text",
              "value": "b",
            },
          ],
          "name": "a",
          "position": {
            "end": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
            "start": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
          },
          "type": "attribute",
        },
      },
      "path": [
        {
          "index": [],
          "name": "y",
          "position": {
            "end": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
          },
          "type": "pathPart",
        },
      ],
      "position": {
        "end": {
          "column": 18,
          "line": 1,
          "offset": 17,
        },
        "start": {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
      },
      "type": "macro",
      "version": "0.6",
    },
    "attributes": [],
    "path": [
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 9,
                "line": 1,
                "offset": 8,
              },
              "start": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 8,
                    "line": 1,
                    "offset": 7,
                  },
                  "start": {
                    "column": 7,
                    "line": 1,
                    "offset": 6,
                  },
                },
                "type": "text",
                "value": "1",
              },
            ],
          },
        ],
        "name": "t-x",
        "position": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$(x-y)\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "x-y",
        "position": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$(x-y.a-b)\` 1`] = `
[
  {
    "accessedProp": {
      "accessedProp": null,
      "attributes": [],
      "path": [
        {
          "index": [],
          "name": "a-b",
          "position": {
            "end": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "type": "pathPart",
        },
      ],
      "position": {
        "end": {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "start": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
      },
      "type": "macro",
      "version": "0.6",
    },
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "x-y",
        "position": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$(x-y/a-b)\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "x-y",
        "position": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [],
        "name": "a-b",
        "position": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$_t\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "_t",
        "position": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t.x.y\` 1`] = `
[
  {
    "accessedProp": {
      "accessedProp": {
        "accessedProp": null,
        "attributes": [],
        "path": [
          {
            "index": [],
            "name": "y",
            "position": {
              "end": {
                "column": 7,
                "line": 1,
                "offset": 6,
              },
              "start": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": "pathPart",
          },
        ],
        "position": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "type": "macro",
        "version": "0.6",
      },
      "attributes": [],
      "path": [
        {
          "index": [],
          "name": "x",
          "position": {
            "end": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "pathPart",
        },
      ],
      "position": {
        "end": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
        "start": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
      },
      "type": "macro",
      "version": "0.6",
    },
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t.x[1].y[2]\` 1`] = `
[
  {
    "accessedProp": {
      "accessedProp": {
        "accessedProp": null,
        "attributes": [],
        "path": [
          {
            "index": [
              {
                "position": {
                  "end": {
                    "column": 13,
                    "line": 1,
                    "offset": 12,
                  },
                  "start": {
                    "column": 10,
                    "line": 1,
                    "offset": 9,
                  },
                },
                "type": "index",
                "value": [
                  {
                    "position": {
                      "end": {
                        "column": 12,
                        "line": 1,
                        "offset": 11,
                      },
                      "start": {
                        "column": 11,
                        "line": 1,
                        "offset": 10,
                      },
                    },
                    "type": "text",
                    "value": "2",
                  },
                ],
              },
            ],
            "name": "y",
            "position": {
              "end": {
                "column": 13,
                "line": 1,
                "offset": 12,
              },
              "start": {
                "column": 9,
                "line": 1,
                "offset": 8,
              },
            },
            "type": "pathPart",
          },
        ],
        "position": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
        },
        "type": "macro",
        "version": "0.6",
      },
      "attributes": [],
      "path": [
        {
          "index": [
            {
              "position": {
                "end": {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
                "start": {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "type": "index",
              "value": [
                {
                  "position": {
                    "end": {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                    "start": {
                      "column": 6,
                      "line": 1,
                      "offset": 5,
                    },
                  },
                  "type": "text",
                  "value": "1",
                },
              ],
            },
          ],
          "name": "x",
          "position": {
            "end": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "pathPart",
        },
      ],
      "position": {
        "end": {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
        "start": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
      },
      "type": "macro",
      "version": "0.6",
    },
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t.x[1].y\` 1`] = `
[
  {
    "accessedProp": {
      "accessedProp": {
        "accessedProp": null,
        "attributes": [],
        "path": [
          {
            "index": [],
            "name": "y",
            "position": {
              "end": {
                "column": 10,
                "line": 1,
                "offset": 9,
              },
              "start": {
                "column": 9,
                "line": 1,
                "offset": 8,
              },
            },
            "type": "pathPart",
          },
        ],
        "position": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
        },
        "type": "macro",
        "version": "0.6",
      },
      "attributes": [],
      "path": [
        {
          "index": [
            {
              "position": {
                "end": {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
                "start": {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "type": "index",
              "value": [
                {
                  "position": {
                    "end": {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                    "start": {
                      "column": 6,
                      "line": 1,
                      "offset": 5,
                    },
                  },
                  "type": "text",
                  "value": "1",
                },
              ],
            },
          ],
          "name": "x",
          "position": {
            "end": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "pathPart",
        },
      ],
      "position": {
        "end": {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "start": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
      },
      "type": "macro",
      "version": "0.6",
    },
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t.x[1][2].y\` 1`] = `
[
  {
    "accessedProp": {
      "accessedProp": {
        "accessedProp": null,
        "attributes": [],
        "path": [
          {
            "index": [],
            "name": "y",
            "position": {
              "end": {
                "column": 13,
                "line": 1,
                "offset": 12,
              },
              "start": {
                "column": 12,
                "line": 1,
                "offset": 11,
              },
            },
            "type": "pathPart",
          },
        ],
        "position": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
        },
        "type": "macro",
        "version": "0.6",
      },
      "attributes": [],
      "path": [
        {
          "index": [
            {
              "position": {
                "end": {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
                "start": {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "type": "index",
              "value": [
                {
                  "position": {
                    "end": {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                    "start": {
                      "column": 6,
                      "line": 1,
                      "offset": 5,
                    },
                  },
                  "type": "text",
                  "value": "1",
                },
              ],
            },
            {
              "position": {
                "end": {
                  "column": 11,
                  "line": 1,
                  "offset": 10,
                },
                "start": {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
              },
              "type": "index",
              "value": [
                {
                  "position": {
                    "end": {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "start": {
                      "column": 9,
                      "line": 1,
                      "offset": 8,
                    },
                  },
                  "type": "text",
                  "value": "2",
                },
              ],
            },
          ],
          "name": "x",
          "position": {
            "end": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "pathPart",
        },
      ],
      "position": {
        "end": {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
        "start": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
      },
      "type": "macro",
      "version": "0.6",
    },
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t.x[1]{a="b"}.y\` 1`] = `
[
  {
    "accessedProp": {
      "accessedProp": {
        "accessedProp": null,
        "attributes": [],
        "path": [
          {
            "index": [],
            "name": "y",
            "position": {
              "end": {
                "column": 17,
                "line": 1,
                "offset": 16,
              },
              "start": {
                "column": 16,
                "line": 1,
                "offset": 15,
              },
            },
            "type": "pathPart",
          },
        ],
        "position": {
          "end": {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
          "start": {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
        },
        "type": "macro",
        "version": "0.6",
      },
      "attributes": {
        "a": {
          "children": [
            {
              "position": {
                "end": {
                  "column": 13,
                  "line": 1,
                  "offset": 12,
                },
                "start": {
                  "column": 12,
                  "line": 1,
                  "offset": 11,
                },
              },
              "type": "text",
              "value": "b",
            },
          ],
          "name": "a",
          "position": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
          },
          "type": "attribute",
        },
      },
      "path": [
        {
          "index": [
            {
              "position": {
                "end": {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
                "start": {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "type": "index",
              "value": [
                {
                  "position": {
                    "end": {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                    "start": {
                      "column": 6,
                      "line": 1,
                      "offset": 5,
                    },
                  },
                  "type": "text",
                  "value": "1",
                },
              ],
            },
          ],
          "name": "x",
          "position": {
            "end": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "pathPart",
        },
      ],
      "position": {
        "end": {
          "column": 17,
          "line": 1,
          "offset": 16,
        },
        "start": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
      },
      "type": "macro",
      "version": "0.6",
    },
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 17,
        "line": 1,
        "offset": 16,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t.x\` 1`] = `
[
  {
    "accessedProp": {
      "accessedProp": null,
      "attributes": [],
      "path": [
        {
          "index": [],
          "name": "x",
          "position": {
            "end": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "pathPart",
        },
      ],
      "position": {
        "end": {
          "column": 5,
          "line": 1,
          "offset": 4,
        },
        "start": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
      },
      "type": "macro",
      "version": "0.6",
    },
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t[$x]\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": [],
    "path": [
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 7,
                "line": 1,
                "offset": 6,
              },
              "start": {
                "column": 3,
                "line": 1,
                "offset": 2,
              },
            },
            "type": "index",
            "value": [
              {
                "accessedProp": null,
                "attributes": [],
                "path": [
                  {
                    "index": [],
                    "name": "x",
                    "position": {
                      "end": {
                        "column": 6,
                        "line": 1,
                        "offset": 5,
                      },
                      "start": {
                        "column": 5,
                        "line": 1,
                        "offset": 4,
                      },
                    },
                    "type": "pathPart",
                  },
                ],
                "position": {
                  "end": {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                  "start": {
                    "column": 4,
                    "line": 1,
                    "offset": 3,
                  },
                },
                "type": "macro",
                "version": "0.6",
              },
            ],
          },
        ],
        "name": "t",
        "position": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t[1.5]\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": [],
    "path": [
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 8,
                "line": 1,
                "offset": 7,
              },
              "start": {
                "column": 3,
                "line": 1,
                "offset": 2,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 7,
                    "line": 1,
                    "offset": 6,
                  },
                  "start": {
                    "column": 4,
                    "line": 1,
                    "offset": 3,
                  },
                },
                "type": "text",
                "value": "1.5",
              },
            ],
          },
        ],
        "name": "t",
        "position": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t[1]\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": [],
    "path": [
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
              "start": {
                "column": 3,
                "line": 1,
                "offset": 2,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 5,
                    "line": 1,
                    "offset": 4,
                  },
                  "start": {
                    "column": 4,
                    "line": 1,
                    "offset": 3,
                  },
                },
                "type": "text",
                "value": "1",
              },
            ],
          },
        ],
        "name": "t",
        "position": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t[1]{a="b"}\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": {
      "a": {
        "children": [
          {
            "position": {
              "end": {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
              "start": {
                "column": 10,
                "line": 1,
                "offset": 9,
              },
            },
            "type": "text",
            "value": "b",
          },
        ],
        "name": "a",
        "position": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "type": "attribute",
      },
    },
    "path": [
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
              "start": {
                "column": 3,
                "line": 1,
                "offset": 2,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 5,
                    "line": 1,
                    "offset": 4,
                  },
                  "start": {
                    "column": 4,
                    "line": 1,
                    "offset": 3,
                  },
                },
                "type": "text",
                "value": "1",
              },
            ],
          },
        ],
        "name": "t",
        "position": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t[a][b]\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": [],
    "path": [
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
              "start": {
                "column": 3,
                "line": 1,
                "offset": 2,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 5,
                    "line": 1,
                    "offset": 4,
                  },
                  "start": {
                    "column": 4,
                    "line": 1,
                    "offset": 3,
                  },
                },
                "type": "text",
                "value": "a",
              },
            ],
          },
          {
            "position": {
              "end": {
                "column": 9,
                "line": 1,
                "offset": 8,
              },
              "start": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 8,
                    "line": 1,
                    "offset": 7,
                  },
                  "start": {
                    "column": 7,
                    "line": 1,
                    "offset": 6,
                  },
                },
                "type": "text",
                "value": "b",
              },
            ],
          },
        ],
        "name": "t",
        "position": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t{a="$b"}\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": {
      "a": {
        "children": [
          {
            "accessedProp": null,
            "attributes": [],
            "path": [
              {
                "index": [],
                "name": "b",
                "position": {
                  "end": {
                    "column": 9,
                    "line": 1,
                    "offset": 8,
                  },
                  "start": {
                    "column": 8,
                    "line": 1,
                    "offset": 7,
                  },
                },
                "type": "pathPart",
              },
            ],
            "position": {
              "end": {
                "column": 9,
                "line": 1,
                "offset": 8,
              },
              "start": {
                "column": 7,
                "line": 1,
                "offset": 6,
              },
            },
            "type": "macro",
            "version": "0.6",
          },
        ],
        "name": "a",
        "position": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "type": "attribute",
      },
    },
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t{a="b"}\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": {
      "a": {
        "children": [
          {
            "position": {
              "end": {
                "column": 8,
                "line": 1,
                "offset": 7,
              },
              "start": {
                "column": 7,
                "line": 1,
                "offset": 6,
              },
            },
            "type": "text",
            "value": "b",
          },
        ],
        "name": "a",
        "position": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "type": "attribute",
      },
    },
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t{a}\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": {
      "a": {
        "children": [],
        "name": "a",
        "position": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "type": "attribute",
      },
    },
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$t1\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": [],
    "path": [
      {
        "index": [],
        "name": "t1",
        "position": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.6 macros > should parse macro \`$x[2$y$$f(3)]\` 1`] = `
[
  {
    "accessedProp": null,
    "attributes": [],
    "path": [
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 14,
                "line": 1,
                "offset": 13,
              },
              "start": {
                "column": 3,
                "line": 1,
                "offset": 2,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 5,
                    "line": 1,
                    "offset": 4,
                  },
                  "start": {
                    "column": 4,
                    "line": 1,
                    "offset": 3,
                  },
                },
                "type": "text",
                "value": "2",
              },
              {
                "accessedProp": null,
                "attributes": [],
                "path": [
                  {
                    "index": [],
                    "name": "y",
                    "position": {
                      "end": {
                        "column": 7,
                        "line": 1,
                        "offset": 6,
                      },
                      "start": {
                        "column": 6,
                        "line": 1,
                        "offset": 5,
                      },
                    },
                    "type": "pathPart",
                  },
                ],
                "position": {
                  "end": {
                    "column": 7,
                    "line": 1,
                    "offset": 6,
                  },
                  "start": {
                    "column": 5,
                    "line": 1,
                    "offset": 4,
                  },
                },
                "type": "macro",
                "version": "0.6",
              },
              {
                "input": [
                  [
                    {
                      "position": {
                        "end": {
                          "column": 12,
                          "line": 1,
                          "offset": 11,
                        },
                        "start": {
                          "column": 11,
                          "line": 1,
                          "offset": 10,
                        },
                      },
                      "type": "text",
                      "value": "3",
                    },
                  ],
                ],
                "macro": {
                  "accessedProp": null,
                  "attributes": [],
                  "path": [
                    {
                      "index": [],
                      "name": "f",
                      "position": {
                        "end": {
                          "column": 10,
                          "line": 1,
                          "offset": 9,
                        },
                        "start": {
                          "column": 9,
                          "line": 1,
                          "offset": 8,
                        },
                      },
                      "type": "pathPart",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "start": {
                      "column": 9,
                      "line": 1,
                      "offset": 8,
                    },
                  },
                  "type": "macro",
                  "version": "0.6",
                },
                "position": {
                  "end": {
                    "column": 13,
                    "line": 1,
                    "offset": 12,
                  },
                  "start": {
                    "column": 7,
                    "line": 1,
                    "offset": 6,
                  },
                },
                "type": "function",
                "version": "0.6",
              },
            ],
          },
        ],
        "name": "x",
        "position": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
    "version": "0.6",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$(t)\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$(t.x)\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [],
        "name": "x",
        "position": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$(t-x[1].y{a="b"})\` 1`] = `
[
  {
    "attributes": {
      "a": {
        "children": [
          {
            "position": {
              "end": {
                "column": 16,
                "line": 1,
                "offset": 15,
              },
              "start": {
                "column": 15,
                "line": 1,
                "offset": 14,
              },
            },
            "type": "text",
            "value": "b",
          },
        ],
        "name": "a",
        "position": {
          "end": {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
          "start": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
        },
        "type": "attribute",
      },
    },
    "path": [
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 9,
                "line": 1,
                "offset": 8,
              },
              "start": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 8,
                    "line": 1,
                    "offset": 7,
                  },
                  "start": {
                    "column": 7,
                    "line": 1,
                    "offset": 6,
                  },
                },
                "type": "text",
                "value": "1",
              },
            ],
          },
        ],
        "name": "t-x",
        "position": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [],
        "name": "y",
        "position": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$(x-y)\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [],
        "name": "x-y",
        "position": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$(x-y.a-b)\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [],
        "name": "x-y",
        "position": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [],
        "name": "a-b",
        "position": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$_t\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [],
        "name": "_t",
        "position": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t.x.y\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [],
        "name": "x",
        "position": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [],
        "name": "y",
        "position": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t.x[1].y[2]\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 8,
                "line": 1,
                "offset": 7,
              },
              "start": {
                "column": 5,
                "line": 1,
                "offset": 4,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 7,
                    "line": 1,
                    "offset": 6,
                  },
                  "start": {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": "text",
                "value": "1",
              },
            ],
          },
        ],
        "name": "x",
        "position": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 13,
                "line": 1,
                "offset": 12,
              },
              "start": {
                "column": 10,
                "line": 1,
                "offset": 9,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 12,
                    "line": 1,
                    "offset": 11,
                  },
                  "start": {
                    "column": 11,
                    "line": 1,
                    "offset": 10,
                  },
                },
                "type": "text",
                "value": "2",
              },
            ],
          },
        ],
        "name": "y",
        "position": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t.x[1].y\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 8,
                "line": 1,
                "offset": 7,
              },
              "start": {
                "column": 5,
                "line": 1,
                "offset": 4,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 7,
                    "line": 1,
                    "offset": 6,
                  },
                  "start": {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": "text",
                "value": "1",
              },
            ],
          },
        ],
        "name": "x",
        "position": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [],
        "name": "y",
        "position": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t.x[1][2].y\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 8,
                "line": 1,
                "offset": 7,
              },
              "start": {
                "column": 5,
                "line": 1,
                "offset": 4,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 7,
                    "line": 1,
                    "offset": 6,
                  },
                  "start": {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": "text",
                "value": "1",
              },
            ],
          },
          {
            "position": {
              "end": {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
              "start": {
                "column": 8,
                "line": 1,
                "offset": 7,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 10,
                    "line": 1,
                    "offset": 9,
                  },
                  "start": {
                    "column": 9,
                    "line": 1,
                    "offset": 8,
                  },
                },
                "type": "text",
                "value": "2",
              },
            ],
          },
        ],
        "name": "x",
        "position": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [],
        "name": "y",
        "position": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t.x[1]{a="b"}.y\` 1`] = `
[
  {
    "attributes": {
      "a": {
        "children": [
          {
            "position": {
              "end": {
                "column": 13,
                "line": 1,
                "offset": 12,
              },
              "start": {
                "column": 12,
                "line": 1,
                "offset": 11,
              },
            },
            "type": "text",
            "value": "b",
          },
        ],
        "name": "a",
        "position": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
        },
        "type": "attribute",
      },
    },
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 8,
                "line": 1,
                "offset": 7,
              },
              "start": {
                "column": 5,
                "line": 1,
                "offset": 4,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 7,
                    "line": 1,
                    "offset": 6,
                  },
                  "start": {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                },
                "type": "text",
                "value": "1",
              },
            ],
          },
        ],
        "name": "x",
        "position": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
  {
    "position": {
      "end": {
        "column": 17,
        "line": 1,
        "offset": 16,
      },
      "start": {
        "column": 15,
        "line": 1,
        "offset": 14,
      },
    },
    "type": "text",
    "value": ".y",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t.x\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
      {
        "index": [],
        "name": "x",
        "position": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t[$x]\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 7,
                "line": 1,
                "offset": 6,
              },
              "start": {
                "column": 3,
                "line": 1,
                "offset": 2,
              },
            },
            "type": "index",
            "value": [
              {
                "attributes": {},
                "path": [
                  {
                    "index": [],
                    "name": "x",
                    "position": {
                      "end": {
                        "column": 6,
                        "line": 1,
                        "offset": 5,
                      },
                      "start": {
                        "column": 5,
                        "line": 1,
                        "offset": 4,
                      },
                    },
                    "type": "pathPart",
                  },
                ],
                "position": {
                  "end": {
                    "column": 6,
                    "line": 1,
                    "offset": 5,
                  },
                  "start": {
                    "column": 4,
                    "line": 1,
                    "offset": 3,
                  },
                },
                "type": "macro",
              },
            ],
          },
        ],
        "name": "t",
        "position": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t[1.5]\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 8,
                "line": 1,
                "offset": 7,
              },
              "start": {
                "column": 3,
                "line": 1,
                "offset": 2,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 7,
                    "line": 1,
                    "offset": 6,
                  },
                  "start": {
                    "column": 4,
                    "line": 1,
                    "offset": 3,
                  },
                },
                "type": "text",
                "value": "1.5",
              },
            ],
          },
        ],
        "name": "t",
        "position": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t[1]\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
              "start": {
                "column": 3,
                "line": 1,
                "offset": 2,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 5,
                    "line": 1,
                    "offset": 4,
                  },
                  "start": {
                    "column": 4,
                    "line": 1,
                    "offset": 3,
                  },
                },
                "type": "text",
                "value": "1",
              },
            ],
          },
        ],
        "name": "t",
        "position": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t[1]{a="b"}\` 1`] = `
[
  {
    "attributes": {
      "a": {
        "children": [
          {
            "position": {
              "end": {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
              "start": {
                "column": 10,
                "line": 1,
                "offset": 9,
              },
            },
            "type": "text",
            "value": "b",
          },
        ],
        "name": "a",
        "position": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "type": "attribute",
      },
    },
    "path": [
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
              "start": {
                "column": 3,
                "line": 1,
                "offset": 2,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 5,
                    "line": 1,
                    "offset": 4,
                  },
                  "start": {
                    "column": 4,
                    "line": 1,
                    "offset": 3,
                  },
                },
                "type": "text",
                "value": "1",
              },
            ],
          },
        ],
        "name": "t",
        "position": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t[a][b]\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
              "start": {
                "column": 3,
                "line": 1,
                "offset": 2,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 5,
                    "line": 1,
                    "offset": 4,
                  },
                  "start": {
                    "column": 4,
                    "line": 1,
                    "offset": 3,
                  },
                },
                "type": "text",
                "value": "a",
              },
            ],
          },
          {
            "position": {
              "end": {
                "column": 9,
                "line": 1,
                "offset": 8,
              },
              "start": {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 8,
                    "line": 1,
                    "offset": 7,
                  },
                  "start": {
                    "column": 7,
                    "line": 1,
                    "offset": 6,
                  },
                },
                "type": "text",
                "value": "b",
              },
            ],
          },
        ],
        "name": "t",
        "position": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t_1\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [],
        "name": "t_1",
        "position": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t{a="$b"}\` 1`] = `
[
  {
    "attributes": {
      "a": {
        "children": [
          {
            "attributes": {},
            "path": [
              {
                "index": [],
                "name": "b",
                "position": {
                  "end": {
                    "column": 9,
                    "line": 1,
                    "offset": 8,
                  },
                  "start": {
                    "column": 8,
                    "line": 1,
                    "offset": 7,
                  },
                },
                "type": "pathPart",
              },
            ],
            "position": {
              "end": {
                "column": 9,
                "line": 1,
                "offset": 8,
              },
              "start": {
                "column": 7,
                "line": 1,
                "offset": 6,
              },
            },
            "type": "macro",
          },
        ],
        "name": "a",
        "position": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "type": "attribute",
      },
    },
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t{a="b"}\` 1`] = `
[
  {
    "attributes": {
      "a": {
        "children": [
          {
            "position": {
              "end": {
                "column": 8,
                "line": 1,
                "offset": 7,
              },
              "start": {
                "column": 7,
                "line": 1,
                "offset": 6,
              },
            },
            "type": "text",
            "value": "b",
          },
        ],
        "name": "a",
        "position": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "type": "attribute",
      },
    },
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t{a}\` 1`] = `
[
  {
    "attributes": {
      "a": {
        "children": [],
        "name": "a",
        "position": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "type": "attribute",
      },
    },
    "path": [
      {
        "index": [],
        "name": "t",
        "position": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$t1\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [],
        "name": "t1",
        "position": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;

exports[`Macro parsing of v0.7 macros > should parse macro \`$x[2$y$$f(3)]\` 1`] = `
[
  {
    "attributes": {},
    "path": [
      {
        "index": [
          {
            "position": {
              "end": {
                "column": 14,
                "line": 1,
                "offset": 13,
              },
              "start": {
                "column": 3,
                "line": 1,
                "offset": 2,
              },
            },
            "type": "index",
            "value": [
              {
                "position": {
                  "end": {
                    "column": 5,
                    "line": 1,
                    "offset": 4,
                  },
                  "start": {
                    "column": 4,
                    "line": 1,
                    "offset": 3,
                  },
                },
                "type": "text",
                "value": "2",
              },
              {
                "attributes": {},
                "path": [
                  {
                    "index": [],
                    "name": "y",
                    "position": {
                      "end": {
                        "column": 7,
                        "line": 1,
                        "offset": 6,
                      },
                      "start": {
                        "column": 6,
                        "line": 1,
                        "offset": 5,
                      },
                    },
                    "type": "pathPart",
                  },
                ],
                "position": {
                  "end": {
                    "column": 7,
                    "line": 1,
                    "offset": 6,
                  },
                  "start": {
                    "column": 5,
                    "line": 1,
                    "offset": 4,
                  },
                },
                "type": "macro",
              },
              {
                "input": [
                  [
                    {
                      "position": {
                        "end": {
                          "column": 12,
                          "line": 1,
                          "offset": 11,
                        },
                        "start": {
                          "column": 11,
                          "line": 1,
                          "offset": 10,
                        },
                      },
                      "type": "text",
                      "value": "3",
                    },
                  ],
                ],
                "path": [
                  {
                    "index": [],
                    "name": "f",
                    "position": {
                      "end": {
                        "column": 10,
                        "line": 1,
                        "offset": 9,
                      },
                      "start": {
                        "column": 9,
                        "line": 1,
                        "offset": 8,
                      },
                    },
                    "type": "pathPart",
                  },
                ],
                "position": {
                  "end": {
                    "column": 13,
                    "line": 1,
                    "offset": 12,
                  },
                  "start": {
                    "column": 7,
                    "line": 1,
                    "offset": 6,
                  },
                },
                "type": "function",
              },
            ],
          },
        ],
        "name": "x",
        "position": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "type": "pathPart",
      },
    ],
    "position": {
      "end": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "macro",
  },
]
`;
